Tp n° 4 - Post image and image profile